--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
   </head>
-  <body></body>
+  <body>
+    <div id="react-app"></div>
+  </body>
 </html>
